--- a/Transciever/Transciever.csproj
+++ b/Transciever/Transciever.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmPositioning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPositioning.Designer.cs">
+      <DependentUpon>frmPositioning.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAbout.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmPositioning.resx">
+      <DependentUpon>frmPositioning.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
     </EmbeddedResource>
